# routes/index.mjs
@@ -1,5 +1,6 @@
 import express from "express";
 import events from "../routes/events.mjs";
+import users from "../routes/users.mjs";
 import swaggerUi from "swagger-ui-express";
 import swaggerDocument from "../swagger.json" assert { type: "json" };
 
@@ -16,5 +17,8 @@ router.get('/', (req, res) => res.send("Hello World"));
 
 /*** events routes */
 router.get('/events',  /*#swagger.tags=['events']*/ events);
+
+/*** user routes */
+router.get('/users', /*#swagger.tags=['users']*/ users);
 
 export default router;
